# track_recognizer

./: CMakeLists.txt  main.cpp
engine/: error.cpp  error.h
engine/mesh/: texture.h  vertex.h
engine/primitive/: camera.cpp  camera.h  entity.cpp  entity.h  mesh.h  meshLoader.cpp  meshLoader.h  mesh_loader.cpp  mesh_loader.h  model.cpp  model.h  objLoaderBly7.h  texture.h
engine/shader/: basic_shader.h  compiler.cpp  compiler.h  loader.cpp  loader.h  shader.cpp  shader.h
res/shader/: basic.frag  basic.vert
